--- a/assets/style.css
+++ b/assets/style.css
@@ -605,28 +605,30 @@ iframe {
     justify-content: center;
     align-items: center;
     gap: 24px;
-    margin: 20px 0;
-    padding: 16px 16px;
+    margin: 14px 14px;
+    padding: 16px;
     flex-wrap: wrap;
     border-radius: 16px;
     background-color: #f0f0f0;
 }
 
 .main-menu a {
-    color: #b30000;
-    font-weight: bold;
-    font-size: 16px;
     text-decoration: none;
-    padding: 8px 16px;
-    border-radius: 40px;
-    transition: background-color 0.3s, color 0.3s;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 10px 16px;
+    color: #b30000;
+    border-radius: 16px;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .main-menu li a:hover {
+    text-decoration: none;
     background-color: #b30000;
     color: white;
     border: #ffcbcd 1px solid;
-    shadow: 0 0 10px rgba(255, 39, 39, 0.6);
 }
 
 
@@ -643,7 +645,7 @@ iframe {
         flex-direction: column;
         align-items: flex-start;
         border-radius: 20px;
-        gap: 10px;
+        gap: 14px;
     }
     .main-menu li a {
         padding: 6px 10px;
