--- a/assets/style.css
+++ b/assets/style.css
@@ -2002,7 +2002,22 @@ iframe {
     .back-to-top a {
         width: 40px;
         height: 40px;
-        font-size: 16px;
-        line-height: 40px;
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .back-to-top a {
+        width: 35px;
+        height: 35px;
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .back-to-top a {
+        width: 30px;
+        height: 30px;
+        font-size: 10px;
     }
 }
